--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "serve-static": "^1.15.0",
+    "swagger-jsdoc": "^6.2.0",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
