--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "date-fn": "^0.0.2",
     "date-fns": "^2.28.0",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
@@ -17,6 +17,7 @@
     "event-stream": "^4.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "serve-static": "^1.15.0",
