--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.8",
     "event-stream": "^4.0.1",
     "express": "~4.16.1",
+    "formidable": "^2.0.1",
     "highlight.js": "^11.5.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
