--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongodb": "^4.6.0",
     "morgan": "~1.9.1",
+    "oracledb": "^5.3.0",
     "serve-static": "^1.15.0",
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
