--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ config.json
 basicController.js
 approvalController.js
 leavesController.js
+controllers/oracle/approvalController.js
+controllers/oracle/basicController.js
+controllers/oracle/leaveController.js
